<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 	<EditText android:id="@+id/add_party"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:hint="@string/new_party_message" />
 	<Button android:id="@+id/add_party_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_party_button" />
 	<TextView android:layout_height='wrap_content'
 	    android:layout_width="wrap_content" 
 	    android:textSize="32sp"
 	    android:text="@string/joined_title"/>
 	<ListView
		android:id="@+id/joined_party_list"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
	</ListView>
	 <TextView android:layout_height='wrap_content'
 	    android:layout_width="wrap_content"
 	    android:textSize="32sp" 
 	    android:text="@string/unjoined_title"/>
	<ListView
		android:id="@+id/unjoined_party_list"
		android:layout_height="wrap_content"
		android:layout_width="match_parent">
	</ListView>
 	<Button
  		android:layout_height="wrap_content"
		android:layout_width="match_parent"
    	android:id="@+id/log_out_button"
        android:onClick="attemptLogOut"
        android:text="@string/action_logout" />
</LinearLayout>

